2009-02-20  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Made '%' to label comments when it occurs at the beginning of a
	line.

2009-01-28  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed another nested partial derivative bug, now in @pintegrate.

2009-01-27  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.07

	* Fixed a bug in @unwrap which would make it forget to cleanup
	nested partial derivatives.

2009-01-23  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.06

	* Removed leftover print_recursive_treeform debugging output.

2009-01-22  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.05

	* Fixed a bug in @pintegrate.

2009-01-20  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.04.

	* Fixed a bug in the simplification of fractions, which would make
	the program crash upon receiving input of the type

	    x_i / (x_k x_k);

2009-01-07  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed a bug in the configure script which would make it fail 
	with older versions of glibmm (<2.16).

2008-12-22  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.03 to limited audience.

	* Weight values can now be arbitrary rational numbers, not just
	positive integers.

	* Fixed a bug in @keep_weight and @drop_weight related to negative
	weights. 

	* Fixed a bug in @keep_weight and @drop_weight which would make
	the algorithms ignore terms without any weight.

2008-12-14  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed a bug in the pattern matcher which would result in
	incorrect matches when matching indices with tensors of the same
	name. 

2008-11-27  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.0 (time for normal version numbers)

	* A few small cosmetic changes. 

2008-11-26  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 0.149

	* Fixed @distribute to cleanup nests correctly.

2008-11-25  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 0.148
